syntax = "proto3";

import "google/protobuf/empty.proto";

message AllServersResponse {
	repeated string master_servers_address = 1;
	repeated string game_servers_address = 2;
}

service Database {
	rpc all_servers(google.protobuf.Empty) returns (AllServersResponse) {}
}
